# ipdata

./: .gitignore  README.md  console.bat  justfile
client/: .gitignore  package.json
client/src/: app.ts  main.ts  serialization.ts
localnet/: admin.json  program.json
program/: Cargo.toml
program/src/: lib.rs
