[package]
name = "ip_data"
version = "1.0.0"
authors = ["<swonl.mail@gmail.com>"]
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
thiserror = "1.0.30"
solana-program = "1.9.9"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"


[lib]
crate-type = ["cdylib", "lib"]